--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,13 +9,13 @@
     <string name="value_phone_register">Nomor Telepon</string>
     <string name="value_password_register">Kata Sandi</string>
     <string name="value_password_verify_register">Konfirmasi Kata Sandi</string>
-    <string name="verify">Verifikasi</string>
+    <string name="verify">Verifikasi Akun</string>
     <string name="term1">Setujui</string>
     <string name="txt_open_term">Syarat &amp; Ketentuan</string>
     <string name="txt_term2">Layanan</string>
     <string name="txt_ask_account">Sudah punya akun?</string>
     <string name="resend_otp">Kirim Ulang</string>
-    <string name="txt_ask_resend_otp">Kode otp tidak terkirim?</string>
+    <string name="txt_ask_resend_otp">Belum dapat kode verifikasi?</string>
     <string name="txt_verify_otp">Verifikasi OTP</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tab_text_1">Masuk</string>
@@ -23,7 +23,7 @@
     <string name="value_email_login">E-Mail</string>
     <string name="txt_example_washer">Jaya Makmur Wash</string>
     <string name="txt_example_washer_address">Jl. M.T. Haryono 13</string>
-    <string name="txt_look_washer_map">Cari di Maps</string>
+    <string name="txt_look_washer_map">Buka di Maps</string>
     <string name="txt_exampe_name_washer">Achmad Wicaksono</string>
     <string name="txt_example_role_washer">Master washer</string>
     <string name="first_type_wash">Layanan Pencucian Dasar</string>
@@ -35,4 +35,29 @@
     <string name="help">Bantuan</string>
     <string name="privacy_policy">Kebijakan Privasi</string>
     <string name="logout">Keluar</string>
+    <string name="txt_send_otp">Kirim Kode</string>
+    <string name="back">Kembali</string>
+    <string name="tab_vendor_text_1">Layanan</string>
+    <string name="tab_vendor_text_2">Informasi</string>
+    <string name="example_ask_email">Apakah benar nadyafadhila@gmail.com berikut merupakan e-mail Anda?</string>
+    <string name="example_des_email">Kami akan mengirimkan 4 digit kode verifikasi. E-Mail Kode verifikasi dapat melalui bagian Spam/Promosi</string>
+    <string name="input_code">Masukkan Kode Verifikasi</string>
+    <string name="operation_hour">JAM OPERASIONAL</string>
+    <string name="monday">Senin</string>
+    <string name="value_monday_hour">08.00 – 16.00 WIB</string>
+    <string name="tuesday">Selasa</string>
+    <string name="value_tuesday_hour">08.00 – 16.00 WIB</string>
+    <string name="wednesday">Rabu</string>
+    <string name="value_wednesday_hour">08.00 – 16.00 WIB</string>
+    <string name="thursday">Kamis</string>
+    <string name="value_thursday_hour">08.00 – 16.00 WIB</string>
+    <string name="friday">Jumat</string>
+    <string name="value_friday_hour">08.00 – 16.00 WIB</string>
+    <string name="saturday">Sabtu</string>
+    <string name="value_saturday_hour">TUTUP</string>
+    <string name="sunday">Minggu</string>
+    <string name="value_sunday_hour">TUTUP</string>
+    <string name="verify_success">Verifikasi Sukses!</string>
+    <string name="done">Selesai</string>
+    <string name="otp_already_send">Kode OTP telah dikirim</string>
 </resources>
