--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,8 @@
     <string name="dekat">Terdekat</string>
     <string name="alamat_ex">Jl. Gajayana XI A</string>
     <string name="pembayaran">Pembayaran berhasil! Silahkan menuju “Jaya Abadi Motor Wash” untuk mencuci motor kamu!</string>
+    <string name="booking">Waktu Pemesanan</string>
+    <string name="booking2">Silahkan memilih waktu yang tersedia untuk dipesan</string>
+    <string name="selengkapnya">selengkapnya</string>
+    <string name="berjalan">berjalan</string>
 </resources>
