finish register with otp logic, add loading animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string-array name="kategori">
         <item>Kategori</item>
     </string-array>
+    <string name="otp_not_match">Kode OTP tidak cocok</string>
 </resources>
