fix layout pelayanan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
     <string name="waktu1">08.00 - 10.00 WIB</string>
     <string name="metode1">pilih metode</string>
     <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
-    <string name="rangkuman">Rangkuman</string>
+    <string name="rangkuman">Rangkuman Pesanan</string>
     <string name="nama_cuci_motor">Nama Cuci Motor</string>
     <string name="kode_pesanan">Kode Pesanan</string>
     <string name="jenis_layanan">Jenis Layanan</string>
