add logic to HomeFragment.kt (name and point)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,7 +119,7 @@
     <string name="cuci_dimana">Mau mencuci dimana hari ini ?</string>
     <string name="apa_kabar">Apa Kabar Hari Ini ?</string>
     <string name="nama_user">Dila</string>
-    <string name="hi">Hi</string>
+    <string name="hi">Hai,</string>
     <string name="point_user">10</string>
     <string name="poin_kamu">Poin Kamu</string>
     <string name="status_buka">Buka Hari Ini</string>
