--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,5 +132,5 @@
     <string name="example_text_history">Pencucian motor pada Suka Makmur sedang berjalan</string>
     <string name="txt_detail_history">Selengkapnya...</string>
     <string name="txt_complete_payment">Pembayaran Telah Berhasil!</string>
-    <string name="harga">Rp. 15.000</string>
+    <string name="harga">15.000</string>
 </resources>
