--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="txt_complete_payment">Pembayaran Telah Berhasil!</string>
     <string name="harga">15.000</string>
     <string name="on_progress">Sedang Berjalan</string>
+    <string name="selesai">Selesai</string>
 </resources>
