--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,9 +123,8 @@
     <string name="poin_kamu">Poin Kamu</string>
     <string name="status_buka">Buka Hari Ini</string>
     <string-array name="area_category">
-        <item>Lowokwaru</item>
-        <item>Sawojajar</item>
-        <item>Wagir</item>
+        <item>Buka</item>
+        <item>Tutup</item>
     </string-array>
     <string name="otp_not_match">Kode OTP tidak cocok</string>
     <string name="example_text_history">Pencucian motor pada Suka Makmur sedang berjalan</string>
