--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,18 @@
     <string name="harga">15.000</string>
     <string name="on_progress">Sedang Berjalan</string>
     <string name="selesai">Selesai</string>
+    <string name="msg_loading">Loading...</string>
+
+    <string-array name="uploadImages">
+        <item>Pick from gallery</item>
+        <item>Click from camera</item>
+        <item>Remove image</item>
+    </string-array>
+
+    <string-array name="itemIds">
+        <item>gallery_image</item>
+        <item>camera_image</item>
+        <item>remove_image</item>
+    </string-array>
+
 </resources>
