--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="second_type_wash">Layanan Pencucian Dasar dan Tingkat Lanjut</string>
     <string name="value_name_profile">Value Name Profile</string>
     <string name="change_profile">Ubah Profil</string>
-    <string name="setting">Pengaturan</string>
+    <string name="change_password">Ganti Kata Sandi</string>
     <string name="help">Bantuan</string>
     <string name="privacy_policy">Kebijakan Privasi</string>
     <string name="logout">Keluar</string>
