--- a/appmitra/src/main/res/values/strings.xml
+++ b/appmitra/src/main/res/values/strings.xml
@@ -146,4 +146,19 @@
     <string name="service_confirm">KONFIRMASI</string>
     <string name="service_late">TELAT</string>
     <string name="service_cancel">GAGAL</string>
+    <string name="detail_name">Nama</string>
+    <string name="detail_queue">Waktu Andrean</string>
+    <string name="detail_type">Jenis Motor</string>
+    <string name="detail_cc">CC</string>
+    <string name="detail_rate">Tarif</string>
+    <string name="detail_order">No. Pemesanan</string>
+    <string name="detail_payment">No. Pembayaran</string>
+    <string name="separator">:</string>
+    <string name="detail_booking_name">Ahmad Wicaksono</string>
+    <string name="detail_booking_time">08.00 - 08.30</string>
+    <string name="detail_booking_type">Revo 110</string>
+    <string name="detail_booking_cc"><![CDATA[< 150 CC]]></string>
+    <string name="detail_booking_price">Rp 10.000</string>
+    <string name="detail_booking_order">USR-009000</string>
+    <string name="detail_booking_payment">880912039012930</string>
 </resources>
