add intent to support page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,7 +152,7 @@
     <string name="support">Bantuan</string>
     <string name="support_caption">Dengan senang hati memberikan pelayanan terbaik untuk Anda</string>
     <string name="support_instagram">citor.official</string>
-    <string name="support_number">+62 812 32 590 761</string>
+    <string name="support_number">628815535349</string>
     <string name="support_email">citorapps@gmail.com</string>
 
 </resources>
