add new rating systems

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,5 +154,6 @@
     <string name="support_instagram">citor.official</string>
     <string name="support_number">628815535349</string>
     <string name="support_email">citorapps@gmail.com</string>
+    <string name="colon">:</string>
 
 </resources>
